--- a/css/sprite.css
+++ b/css/sprite.css
@@ -1,91 +1,1 @@
-/*
-Icon classes can be used entirely standalone. They are named after their original file names.
-
-```html
-<i class="icon-home"></i>
-```
-*/
-.icon-arrow-donw-dark {
-  background-image: url(sprite.png);
-  background-position: 0px 0px;
-  width: 21px;
-  height: 12px;
-}
-.icon-arrow-donw-light {
-  background-image: url(sprite.png);
-  background-position: 0px -12px;
-  width: 21px;
-  height: 12px;
-}
-.icon-back-top {
-  background-image: url(sprite.png);
-  background-position: 0px -24px;
-  width: 44px;
-  height: 50px;
-}
-.icon-logo-bradesco {
-  background-image: url(sprite.png);
-  background-position: 0px -804px;
-  width: 250px;
-  height: 90px;
-}
-.icon-logo-cea {
-  background-image: url(sprite.png);
-  background-position: 0px -354px;
-  width: 250px;
-  height: 90px;
-}
-.icon-logo-embraer {
-  background-image: url(sprite.png);
-  background-position: 0px -174px;
-  width: 250px;
-  height: 90px;
-}
-.icon-logo-gm {
-  background-image: url(sprite.png);
-  background-position: 0px -264px;
-  width: 250px;
-  height: 90px;
-}
-.icon-logo-natura {
-  background-image: url(sprite.png);
-  background-position: 0px -894px;
-  width: 250px;
-  height: 90px;
-}
-.icon-logo-qualcomm {
-  background-image: url(sprite.png);
-  background-position: 0px -444px;
-  width: 250px;
-  height: 90px;
-}
-.icon-logo-rbs {
-  background-image: url(sprite.png);
-  background-position: 0px -534px;
-  width: 250px;
-  height: 90px;
-}
-.icon-logo-siemens {
-  background-image: url(sprite.png);
-  background-position: 0px -624px;
-  width: 250px;
-  height: 90px;
-}
-.icon-logo-takeda {
-  background-image: url(sprite.png);
-  background-position: 0px -714px;
-  width: 250px;
-  height: 90px;
-}
-.icon-nav-close {
-  background-image: url(sprite.png);
-  background-position: 0px -74px;
-  width: 44px;
-  height: 50px;
-}
-.icon-nav {
-  background-image: url(sprite.png);
-  background-position: 0px -124px;
-  width: 44px;
-  height: 50px;
-}
+.icon-arrow-donw-dark,.icon-arrow-donw-light,.icon-back-top,.icon-logo-bradesco,.icon-logo-cea,.icon-logo-embraer,.icon-logo-natura,.icon-logo-qualcomm,.icon-logo-rbs,.icon-logo-siemens,.icon-logo-takeda,.icon-nav,.icon-nav-close{background-image:url(sprite.png)}.icon-arrow-donw-dark{background-position:-403px -360px;width:21px;height:12px}.icon-arrow-donw-light{background-position:-382px -360px;width:21px;height:12px}.icon-back-top{background-position:-250px -360px;width:44px;height:50px}.icon-logo-bradesco,.icon-logo-cea,.icon-logo-embraer,.icon-logo-gm,.icon-logo-natura,.icon-logo-qualcomm,.icon-logo-rbs,.icon-logo-siemens,.icon-logo-takeda{width:250px;height:90px}.icon-logo-bradesco{background-position:0 -90px}.icon-logo-cea{background-position:-250px 0}.icon-logo-embraer{background-position:-250px -90px}.icon-logo-gm{background-image:url(sprite.png);background-position:0 -180px}.icon-logo-natura{background-position:0 0}.icon-logo-qualcomm{background-position:-250px -180px}.icon-logo-rbs{background-position:0 -270px}.icon-logo-siemens{background-position:-250px -270px}.icon-logo-takeda{background-position:0 -360px}.icon-nav-close{background-position:-294px -360px;width:44px;height:50px}.icon-nav{background-position:-338px -360px;width:44px;height:50px}
