--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -58,7 +58,6 @@ section
 
 footer
     background: darken($secondary, 5%)
-    padding: 30px 20px
     text-align: center
 
     @include md-screen
@@ -66,6 +65,7 @@ footer
 
     div
        @include maxWidth
+       padding: 30px 20px
 
     h2
         font-size: 1.2em
@@ -85,4 +85,7 @@ footer
 
             li:before
                 content: '/'
-                padding: 0 5px
+                padding: 0 8px
+
+            li:first-child:before
+                display: none
