--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -7,7 +7,7 @@ body,
 html
 	background: $secondary
 	color: white
-	font-family: 'Open Sans'
+	font-family: 'Open Sans', sans-serif
     height: 100vh
 
 @include md-screen
